--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" type="text/css" href="assets/css/jquery.fancybox.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <link rel="stylesheet" href="/assets/css/normalize.css">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="assets/css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
   <title>XBOX</title>
 </head>
 <body>
@@ -17,7 +17,7 @@
     <div class="container">
       <div class="row">
         <div class="col-2">
-          <a href="index.html"><img src="/assets/img/xbox.svg" alt="logo: XBOX" class="header-logo"></a>
+          <a href="index.html"><img src="assets/img/xbox.svg" alt="logo: XBOX" class="header-logo"></a>
         </div>
         <!-- /.col-2 -->
         <div class="col-4 col-lg-1 col-xl-2 col-xxl-3"><div class="burger">
@@ -107,7 +107,7 @@
   <div class="container-fluid">
     <div class="slider-wrapper">
       <div class="slider_item">
-        <img src="/assets/img/star.jpg" alt="" class="slider-img">
+        <img src="assets/img/star.jpg" alt="" class="slider-img">
         <div class="container">
           <div class="row">
             <div class="col-sm-4 col-md-7"></div>
@@ -169,7 +169,7 @@
   <div class="container">
     <div class="row">
       <div class="col-12 text-center">
-        <img src="/assets/img/value_icon.png" alt="" class="value-image">
+        <img src="assets/img/value_icon.png" alt="" class="value-image">
       </div>
       <div class="col-12 text-center">
         <h2 class="value-title">
@@ -186,7 +186,7 @@
       <div class="col-12 col-lg-4">
         <div class="value-card">
          <div class="value-card__wrap">
-          <img src="/assets/img/xbox-one-x.jpg" alt="" class="value-card__image">
+          <img src="assets/img/xbox-one-x.jpg" alt="" class="value-card__image">
          </div>
           <div class="value-card-wrapper text-center">
             <p class="value-card__subtitle">XBOX ONE X</p>
@@ -202,7 +202,7 @@
       <div class="col-12 col-lg-4">
         <div class="value-card">
          <div class="value-card__wrap">
-          <img src="/assets/img/mixer-logo.jpg" alt="" class="value-card__image">
+          <img src="assets/img/mixer-logo.jpg" alt="" class="value-card__image">
          </div>
           <div class="value-card-wrapper text-center">
             <p class="value-card__subtitle">mixer Streaming</p>
@@ -218,7 +218,7 @@
       <div class="col-12 col-lg-4">
         <div class="value-card">
          <div class="value-card__wrap">
-          <img src="/assets/img/games-with-gold.jpg" alt="" class="value-card__image">
+          <img src="assets/img/games-with-gold.jpg" alt="" class="value-card__image">
          </div>
           <div class="value-card-wrapper text-center">
             <p class="value-card__subtitle">Free Games Every Month</p>
@@ -257,7 +257,7 @@
           <div class="col-12 ex-card">
                 <div class="exclusive-card">
                   <div class="exclusive-card__image">
-                    <img src="/assets/img/exclusive_1.jpg" alt="" class="exclusive__img">
+                    <img src="assets/img/exclusive_1.jpg" alt="" class="exclusive__img">
                   </div>
                   <div class="exclusive-card__text">
                     <h4 class="exclusive-card__game">Call of Duty: WWII</h4>
@@ -272,7 +272,7 @@
                 <!-- /.exclusive-card -->
                 <div class="exclusive-card">
                   <div class="exclusive-card__image">
-                    <img src="/assets/img/exclusive_1.jpg" alt="" class="exclusive__img">
+                    <img src="assets/img/exclusive_1.jpg" alt="" class="exclusive__img">
                   </div>
                   <div class="exclusive-card__text">
                     <h4 class="exclusive-card__game">Call of Duty: WWII</h4>
@@ -287,7 +287,7 @@
                 <!-- /.exclusive-card -->
                 <div class="exclusive-card">
                   <div class="exclusive-card__image">
-                    <img src="/assets/img/exclusive_1.jpg" alt="" class="exclusive__img">
+                    <img src="assets/img/exclusive_1.jpg" alt="" class="exclusive__img">
                   </div>
                   <div class="exclusive-card__text">
                     <h4 class="exclusive-card__game">Call of Duty: WWII</h4>
@@ -302,7 +302,7 @@
                 <!-- /.exclusive-card -->
                 <div class="exclusive-card">
                   <div class="exclusive-card__image">
-                    <img src="/assets/img/exclusive_1.jpg" alt="" class="exclusive__img">
+                    <img src="assets/img/exclusive_1.jpg" alt="" class="exclusive__img">
                   </div>
                   <div class="exclusive-card__text">
                     <h4 class="exclusive-card__game">Call of Duty: WWII</h4>
@@ -430,10 +430,10 @@
 <script>
   jQuery(".fancybox").fancybox(); 
 </script>
-<script src="/assets/js/slick.min.js"></script>
+<script src="assets/js/slick.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script src="https://kit.fontawesome.com/42e2cda77f.js" crossorigin="anonymous"></script>
-<script src="/assets/js/myjs.js"></script>
+<script src="assets/js/myjs.js"></script>
 </body>
 </html>
