--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       </div>
       <!-- /.slider_items -->
       <div class="slider_item">
-        <img src="/assets/img/star.jpg" alt="" class="slider-img">
+        <img src="assets/img/star.jpg" alt="" class="slider-img">
         <div class="container">
           <div class="row">
             <div class="col-sm-4 col-md-7"></div>
@@ -244,7 +244,7 @@
   <div class="container-fluid">
    <div class="exclusive-wrap">
     <!-- <div class="exclusive-wrapper">
-      <img src="/assets/img/exclusiveBg.jpg" alt="" class="exclusive-bg">
+
     </div> -->
     <div class="container">
       <div class="exclusive-text">
