--- a/callOfDuty.html
+++ b/callOfDuty.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" type="text/css" href="assets/css/jquery.fancybox.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <link rel="stylesheet" href="/assets/css/normalize.css">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="assets/css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
   <title>XBOX</title>
 </head>
 
@@ -19,7 +19,7 @@
       <div class="container">
         <div class="row">
           <div class="col-2">
-            <a href="index.html"><img src="/assets/img/xbox.svg" alt="logo: XBOX" class="header-logo"></a>
+            <a href="index.html"><img src="assets/img/xbox.svg" alt="logo: XBOX" class="header-logo"></a>
           </div>
           <!-- /.col-2 -->
           <div class="col-4 col-lg-1 col-xl-2 col-xxl-3">
@@ -112,7 +112,7 @@
     <div class="container-fluid">
       <div class="cod-wrapper">
         <div class="cod-item">
-          <img src="/assets/img/Cod/CoD.jpg" alt="" class="slider-img cod-img">
+          <img src="assets/img/Cod/CoD.jpg" alt="" class="slider-img cod-img">
           <div class="container">
             <div class="row">
               <div class="col-lg-7 col-md-6"></div>
@@ -145,7 +145,7 @@
         </div>
         <!-- /.cod-item -->
         <div class="cod-item">
-          <img src="/assets/img/Cod/CoD.jpg" alt="" class="slider-img cod-img">
+          <img src="assets/img/Cod/CoD.jpg" alt="" class="slider-img cod-img">
           <div class="container">
             <div class="row">
               <div class="col-lg-7 col-md-6"></div>
@@ -227,7 +227,7 @@
           <!-- /.col-4 -->
           
           <div class="col-lg-6 col-12">
-            <img src="/assets/img/CoD/life-img.jpg" alt="" class="life-img game-img">
+            <img src="assets/img/CoD/life-img.jpg" alt="" class="life-img game-img">
           </div>
         </div>
         <!-- /.col-6 -->
@@ -237,7 +237,7 @@
       <div class="answers">
         <div class="row">
           <div class="col-lg-6 col-12 order-lg-1 order-2">
-            <img src="/assets/img/CoD/answers-img.jpg" alt="" class="answers-img game-img">
+            <img src="assets/img/CoD/answers-img.jpg" alt="" class="answers-img game-img">
           </div>
           <!-- /.col-6 -->
           
@@ -360,11 +360,11 @@
   <script>
     jQuery(".fancybox").fancybox(); 
   </script>
-  <script src="/assets/js/slick.min.js"></script>
+  <script src="assets/js/slick.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <script src="https://kit.fontawesome.com/42e2cda77f.js" crossorigin="anonymous"></script>
-  <script src="/assets/js/myjs.js"></script>
+  <script src="assets/js/myjs.js"></script>
   </body>
   
   </html>
