--- a/callOfDuty.html
+++ b/callOfDuty.html
@@ -145,7 +145,7 @@
         </div>
         <!-- /.cod-item -->
         <div class="cod-item">
-          <img src="assets/img/Cod/CoD.jpg" alt="" class="slider-img cod-img">
+          <img src="assets/img/Cod/cod.jpg" alt="" class="slider-img cod-img">
           <div class="container">
             <div class="row">
               <div class="col-lg-7 col-md-6"></div>
@@ -209,7 +209,7 @@
         <div class="row">
           <div class="col-12 text-center">
               <!-- <a href="https://www.youtube.com/embed/4s1NWteHNu4" class="fancybox"> -->
-                <img class="presentation-video" src="/assets/img/CoD/preview.jpg" alt="">
+                <img class="presentation-video" src="assets/img/CoD/preview.jpg" alt="">
               <!-- </a> -->
               <!-- <i class="fa-solid fa-play"></i> -->
               <a href="https://www.youtube.com/embed/4s1NWteHNu4" class="fa-solid fa-play play fancybox"></a>
