--- a/callOfDuty.html
+++ b/callOfDuty.html
@@ -145,7 +145,7 @@
         </div>
         <!-- /.cod-item -->
         <div class="cod-item">
-          <img src="assets/img/Cod/cod.jpg" alt="" class="slider-img cod-img">
+          <img src="assets/img/CoD/cod.jpg" alt="" class="slider-img cod-img">
           <div class="container">
             <div class="row">
               <div class="col-lg-7 col-md-6"></div>
