--- a/index.html
+++ b/index.html
@@ -343,18 +343,18 @@
       <div class="design-wrap">
         <div class="row">
           <div class="col-12">
-            <h1 class="design-title">Xbox Design Lab</h1>
+            <h1 class="design-title text-center text-lg-start">Xbox Design Lab</h1>
           </div>
           <!-- /.col-12 -->
           <div class="col-lg-5 col-12">
-            <p class="design-subtitle">Make yours one in a billion with new colors, metallic finishes and rubberized grips.</p>
+            <p class="design-subtitle text-center text-lg-start">Make yours one in a billion with new colors, metallic finishes and rubberized grips.</p>
           </div>
           <!-- /.col-5 -->
         </div>
         <!-- /.row -->
         <div class="row">
           <div class="col-xl-6 col-12">
-            <div class="design-wrap-btn d-flex gap-3 flex-column flex-sm-row">
+            <div class="design-wrap-btn d-flex gap-3 flex-column flex-sm-row justify-content-center justify-content-lg-start">
               <a href="" class="button design-btn button-games text-center">Design Yours</a>
               <a href="" class="button button-games design-btn-exp text-center">Explore Consoles & Accessories</a>
             </div>
