--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container">
       <div class="row">
         <div class="col-2">
-          <a href="index.html"><img src="/assets/img/xbox.svg" alt="logo: XBOX" class="header-logo"></a>
+          <a href="index.html"><img src="assets/img/xbox.svg" alt="logo: XBOX" class="header-logo"></a>
         </div>
         <!-- /.col-2 -->
         <div class="col-4 col-lg-1 col-xl-2 col-xxl-3">
