--- a/callOfDuty.html
+++ b/callOfDuty.html
@@ -23,6 +23,37 @@
           </div>
           <!-- /.col-2 -->
           <div class="col-4 col-lg-1 col-xl-2 col-xxl-3">
+
+          </div>
+          <div class="col-6 col-lg-9 col-xl-8 col-xxl-7 d-flex gap-4 justify-content-around">
+            <ul class="nav-list d-flex gap-3">
+              <li>
+                <a href="#" class="menu-item">games <span class="line-line fa-solid fa-chevron-down"></span></a>
+                <ul class="games-list games-list-li">
+
+                  <li> <a href="callOfDuty.html" class="games-item">Call of Duty: WWII</a></li>
+                  <li> <a href="callOfDuty.html" class="games-item">Call of Duty: WWII</a></li>
+
+                </ul>
+                <!-- /.games-list -->
+              </li>
+              <li>
+                <a href="#" class="menu-item">consoles <span class="line-line fa-solid fa-chevron-down"></span></a>
+                <ul class="games-list games-list-li">
+                  <li> <a href="http://google.com" class="games-item">Xbox</a></li>
+                  <li> <a href="#" class="games-item">xbox 360</a></li>
+                  <li> <a href="#" class="games-item">Xbox One</a></li>
+                </ul>
+                <!-- /.games-list -->
+              <li>
+                <a href="#" class="menu-item">Community</a>
+              </li>
+            </ul>
+            <!-- /.nav-list -->
+
+            <form action="" method="get">
+              <input class="search" name="s" placeholder="search" type="search">
+            </form>
             <div class="burger">
               <div class="burger-menu">
                 <input id="menu-toggle" type="checkbox" />
@@ -52,40 +83,20 @@
                   <li>
                     <a href="#" class="menu-item">Community</a>
                   </li>
+                  <div class="user-p user-b">
+                    <p class="user user-text">My XBOX <span class="line-line-line fa-solid fa-chevron-down"></span>
+                    <ul class="user-list user-list-burger">
+                      <li><a href="#" class="user-item">xbox</a></li>
+                      <li><a href="#" class="user-item">xbox</a></li>
+                      <li><a href="#" class="user-item">xbox</a></li>
+                    </ul>
+                    <!-- /.user -->
+                    </p>
+                  </div>
                 </ul>
               </div>
             </div>
             <!-- /.burger -->
-          </div>
-          <div class="col-6 col-lg-9 col-xl-8 col-xxl-7 d-flex gap-4 justify-content-around">
-            <ul class="nav-list d-flex gap-3">
-              <li>
-                <a href="#" class="menu-item">games <span class="line-line fa-solid fa-chevron-down"></span></a>
-                <ul class="games-list games-list-li">
-
-                  <li> <a href="index.html" class="games-item">star wars</a></li>
-                  <li> <a href="index.html" class="games-item">star wars</a></li>
-
-                </ul>
-                <!-- /.games-list -->
-              </li>
-              <li>
-                <a href="#" class="menu-item">consoles <span class="line-line fa-solid fa-chevron-down"></span></a>
-                <ul class="games-list games-list-li">
-                  <li> <a href="http://google.com" class="games-item">Xbox</a></li>
-                  <li> <a href="#" class="games-item">xbox 360</a></li>
-                  <li> <a href="#" class="games-item">Xbox One</a></li>
-                </ul>
-                <!-- /.games-list -->
-              <li>
-                <a href="#" class="menu-item">Community</a>
-              </li>
-            </ul>
-            <!-- /.nav-list -->
-
-            <form action="" method="get">
-              <input class="search" name="s" placeholder="search" type="search">
-            </form>
             <div class="user-p">
               <p class="user">My XBOX <span class="line-line-line fa-solid fa-chevron-down"></span>
               <ul class="user-list">
